ui improvement + multi-select filter

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@tanstack/react-query": "^5.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.2.0",
     "lucide-react": "^0.485.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
